fix site background transparency, gap between buttons and missing scroll bars

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -644,7 +644,7 @@ body {
 .site {
   padding: 0 24px;
   padding: 0 1.714285714rem;
-  background-color: rgba(255, 255, 255, 0.20); /* Main Page */
+  background-color: rgba(255, 255, 255, 0.95); /* Main Page */
 }
 .site-content {
   margin: 24px 0 0;
@@ -1677,7 +1677,7 @@ img#wpstats {
     margin: 0 auto;
     max-width: 960px;
     max-width: 68.571428571rem;
-    overflow: hidden;
+    overflow: visible;
   }
   .site-content {
     float: left;
@@ -1832,7 +1832,7 @@ img#wpstats {
 /* Minimum width of 960 pixels. */
 @media screen and (min-width: 960px) {
   body {
-    background-color: #e6e6e6;
+    background-color: #0B3758;
   }
   body .site {
     padding: 0 40px;
@@ -2161,6 +2161,7 @@ pre .javascript .function {
 .entry-content td, .comment-content td {
   border: 0px none;
 }
+/* search fix */
 #s { /* search button */
   width: auto !important;
   height: 16.66px !important;
@@ -2168,6 +2169,17 @@ pre .javascript .function {
 #searchsubmit {
   height: 29.2px !important;
 }
+/* scrollbar fix */
 .highlight > table {
   border-bottom: medium none;
+}
+#page, html {
+  overflow: hidden !important;
+}
+body {
+  overflow: auto; /* 'scroll' if necessary, 'visible' otherwise*/
+}
+/* hansen submit button wrap */
+.hansen-wrap {
+  margin-bottom: 6px;
 }
